--- a/ember/app/components/layer-switcher-element.hbs
+++ b/ember/app/components/layer-switcher-element.hbs
@@ -8,5 +8,5 @@
   {{on "touchend" (action (mut this.highlighted) false)}}
 >
   <img src={{imagePath}}>
-  {{fa-icon "check"}} {{layer.name}}
+  {{svg-jar "check" class="fa-svg"}} {{layer.name}}
 </a>
