--- a/ember/app/components/nav-bar-link.hbs
+++ b/ember/app/components/nav-bar-link.hbs
@@ -1,7 +1,7 @@
 <@nav.item ...attributes>
   {{#@nav.link-to @target}}
-    {{fa-icon @icon size="lg" class="visible-sm-inline-block" title=@title}}
-    {{fa-icon @icon fixedWidth=true class="visible-xs-inline-block"}}
+    <span class="visible-sm-inline-block" title={{@title}}>{{svg-jar @icon class="fa-svg large"}}</span>
+    {{svg-jar @icon class="fa-svg fixed-width visible-xs-inline-block"}}
     <span class="hidden-sm">{{@title}}</span>
   {{/@nav.link-to}}
 </@nav.item>
