--- a/ember/app/components/settings-panels/tracking-key.hbs
+++ b/ember/app/components/settings-panels/tracking-key.hbs
@@ -2,7 +2,7 @@
   <div class="panel-heading">
     <h3 class="panel-title">{{t "live-tracking-key"}}</h3>
     <p class="panel-help-icon">
-      <LinkTo @route="tracking.info">{{fa-icon "question" fixedWidth=true}}</LinkTo>
+      <LinkTo @route="tracking.info">{{svg-jar "question" class="fa-svg fixed-width"}}</LinkTo>
     </p>
   </div>
   <div class="panel-body">
