--- a/ember/app/components/timeline-events/club-join.hbs
+++ b/ember/app/components/timeline-events/club-join.hbs
@@ -1,6 +1,6 @@
 <tr>
   <td class="icon">
-    {{fa-icon "group" class="small"}}
+    {{svg-jar "group" class="fa-svg small"}}
   </td>
   <td>
     <LinkTo @route="club" @model={{event.club.id}} class="btn btn-default btn-sm pull-right">{{t "show"}}</LinkTo>
