--- a/ember/app/components/timeline-events/flight-upload.hbs
+++ b/ember/app/components/timeline-events/flight-upload.hbs
@@ -1,6 +1,6 @@
 <tr>
   <td class="icon">
-    {{fa-icon "plane"}}
+    {{svg-jar "plane" class="fa-svg"}}
   </td>
   <td>
     <LinkTo @route="flight" @model={{event.flight.id}} class="btn btn-default btn-sm pull-right">{{t "show"}}</LinkTo>
