--- a/ember/app/components/timeline-events/new-user.hbs
+++ b/ember/app/components/timeline-events/new-user.hbs
@@ -1,6 +1,6 @@
 <tr>
   <td class="icon">
-    {{fa-icon "asterisk" class="small"}}
+    {{svg-jar "asterisk" class="fa-svg small"}}
   </td>
   <td>
     <LinkTo @route="user" @model={{event.actor.id}} class="btn btn-default btn-sm pull-right">{{t "show"}}</LinkTo>
