--- a/ember/app/components/tracking-page.hbs
+++ b/ember/app/components/tracking-page.hbs
@@ -5,7 +5,7 @@
       <ul class="sidebar-tabs" role="tablist">
         <li>
           <a href="#tab-overview" title={{t "overview"}} role="tab">
-            {{fa-icon "info" size="lg"}}
+            {{svg-jar "info" class="fa-svg large"}}
           </a>
         </li>
       </ul>
