--- a/ember/app/styles/app.scss
+++ b/ember/app/styles/app.scss
@@ -2,6 +2,7 @@
 
 @import 'bootstrap';
 @import 'flatpickr';
+@import 'font-awesome';
 
 @import 'components/layer-switcher';
 @import 'components/login-form';
