--- a/ember/app/templates/index.hbs
+++ b/ember/app/templates/index.hbs
@@ -5,9 +5,9 @@
         <p class="lead pull-left" data-test-welcome-message>{{t "about.welcome"}}</p>
 
         <div local-class="social-buttons">
-          <a href="https://www.facebook.com/skylines.project" class="btn btn-default" target="_blank" rel="noopener">{{fa-icon "facebook-square"}}</a>
-          <a href="https://twitter.com/skylinesproject" class="btn btn-default" target="_blank" rel="noopener">{{fa-icon "twitter"}}</a>
-          <a href="https://github.com/skylines-project/skylines" class="btn btn-default" target="_blank" rel="noopener">{{fa-icon "github-alt"}}</a>
+          <a href="https://www.facebook.com/skylines.project" class="btn btn-default" target="_blank" rel="noopener">{{svg-jar "facebook-square" class="fa-svg"}}</a>
+          <a href="https://twitter.com/skylinesproject" class="btn btn-default" target="_blank" rel="noopener">{{svg-jar "twitter" class="fa-svg"}}</a>
+          <a href="https://github.com/skylines-project/skylines" class="btn btn-default" target="_blank" rel="noopener">{{svg-jar "github-alt" class="fa-svg"}}</a>
         </div>
       </div>
     </div>
@@ -23,43 +23,43 @@
 
     <div class="row">
       <div class="col-md-4">
-        <h2><LinkTo @route="flights">{{fa-icon "plane"}} {{t "flight-database"}}</LinkTo></h2>
+        <h2><LinkTo @route="flights">{{svg-jar "plane" class="fa-svg fixed-width"}} {{t "flight-database"}}</LinkTo></h2>
         <p>{{t "about.flights" htmlSafe=true uploadURL=(href-to "flight-upload")}}</p>
       </div>
       <div class="col-md-4">
-        <h2><LinkTo @route="tracking">{{fa-icon "rss"}} {{t "live-tracking"}}</LinkTo></h2>
+        <h2><LinkTo @route="tracking">{{svg-jar "rss" class="fa-svg fixed-width"}} {{t "live-tracking"}}</LinkTo></h2>
         <p>{{t "about.tracking" htmlSafe=true url=(href-to "tracking.info")}}</p>
       </div>
       <div class="col-md-4">
-        <h2>{{fa-icon "info-circle"}} {{t "flight-analysis"}}</h2>
+        <h2>{{svg-jar "info-circle" class="fa-svg fixed-width"}} {{t "flight-analysis"}}</h2>
         <p>{{t "about.analysis" htmlSafe=true}}</p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
-        <h2>{{fa-icon "map-marker"}} {{t "task-planning"}} <small>({{t "planned"}})</small></h2>
+        <h2>{{svg-jar "map-marker" class="fa-svg fixed-width"}} {{t "task-planning"}} <small>({{t "planned"}})</small></h2>
         <p>{{t "about.task-planning" htmlSafe=true prosoar=(html-safe "<a href=\"http://www.prosoar.de/\" target=\"_blank\" rel=\"noopener\">proSoar</a>")}}</p>
       </div>
       <div class="col-md-4">
-        <h2>{{fa-icon "trophy"}} {{t "competitions"}} <small>({{t "planned"}})</small></h2>
+        <h2>{{svg-jar "trophy" class="fa-svg fixed-width"}} {{t "competitions"}} <small>({{t "planned"}})</small></h2>
         <p>{{t "about.competitions" htmlSafe=true}}</p>
       </div>
       <div class="col-md-4">
-        <h2>{{fa-icon "check-square-o"}} {{t "achievements"}} <small>({{t "planned"}})</small></h2>
+        <h2>{{svg-jar "check-square-o" class="fa-svg fixed-width"}} {{t "achievements"}} <small>({{t "planned"}})</small></h2>
         <p>{{t "about.achievements" htmlSafe=true}}</p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
-        <h2>{{fa-icon "group"}} {{t "social-network"}}</h2>
+        <h2>{{svg-jar "group" class="fa-svg fixed-width"}} {{t "social-network"}}</h2>
         <p>{{t "about.notifications" htmlSafe=true url=(href-to notificationsTarget)}}</p>
       </div>
       <div class="col-md-4">
-        <h2>{{fa-icon "cloud"}} {{t "open-data"}}</h2>
+        <h2>{{svg-jar "cloud" class="fa-svg fixed-width"}} {{t "open-data"}}</h2>
         <p>{{t "about.open-data" htmlSafe=true license=(html-safe "<a href=\"http://opendatacommons.org/licenses/by/summary/\" target=\"_blank\" rel=\"noopener\">Open Data Commons Attribution License (ODBY)</a>") welt2000=(html-safe "<a href=\"http://www.segelflug.de/vereine/welt2000/\" target=\"_blank\" rel=\"noopener\">WELT2000</a>")}}</p>
       </div>
       <div class="col-md-4">
-        <h2>{{fa-icon "wrench"}} {{t "open-source"}}</h2>
+        <h2>{{svg-jar "wrench" class="fa-svg fixed-width"}} {{t "open-source"}}</h2>
         <p>{{t "about.open-source" htmlSafe=true teamURL="/about/team" licenseURL="/about/license" github=(html-safe "<a href=\"https://github.com/skylines-project/skylines#contact-and-contributing\" target=\"_blank\" rel=\"noopener\">GitHub</a>")}}</p>
       </div>
     </div>
