--- a/ember/app/templates/tracking/index_loading.hbs
+++ b/ember/app/templates/tracking/index_loading.hbs
@@ -7,7 +7,7 @@
     <div class="col-md-12">
       <p>{{t "loading"}}</p>
 
-      <LinkTo @route="tracking.info" class="btn btn-default">{{fa-icon "question-circle"}} {{t "how-to-use-live-tracking"}}</LinkTo>
+      <LinkTo @route="tracking.info" class="btn btn-default">{{svg-jar "question-circle" class="fa-svg"}} {{t "how-to-use-live-tracking"}}</LinkTo>
     </div>
   </div>
 </BasePage>
