--- a/ember/app/components/fix-table-row.module.scss
+++ b/ember/app/components/fix-table-row.module.scss
@@ -8,3 +8,12 @@
     vertical-align: middle;
   }
 }
+
+.remove-button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+}
