--- a/ember/app/components/flight-page.hbs
+++ b/ember/app/components/flight-page.hbs
@@ -4,36 +4,36 @@
     <ul class="sidebar-tabs" role="tablist">
       <li>
         <a href="#tab-overview" title={{t "overview"}} role="tab">
-          {{fa-icon "info" size="lg"}}
+          {{svg-jar "info" class="fa-svg large"}}
         </a>
       </li>
       <li>
         <a href="#tab-comments" title={{t "comments"}} role="tab">
-          {{fa-icon "comments-o" size="lg"}}
+          {{svg-jar "comments-o" class="fa-svg large"}}
         </a>
       </li>
       <li>
         <a href="#tab-stats-total" title={{t "total"}} role="tab">
-          {{fa-icon "bar-chart" size="lg"}}
+          {{svg-jar "bar-chart" class="fa-svg large"}}
         </a>
       </li>
       <li>
         <a href="#tab-stats-legs" title={{t "leg-statistics"}} role="tab">
-          {{fa-icon "arrows-h" size="lg"}}
+          {{svg-jar "arrows-h" class="fa-svg large"}}
         </a>
       </li>
 
       {{#if phases}}
         <li>
           <a href="#tab-stats-phases" title={{t "phase-statistics"}} role="tab">
-            {{fa-icon "step-forward" size="lg"}}
+            {{svg-jar "step-forward" class="fa-svg large"}}
           </a>
         </li>
       {{/if}}
 
       <li>
         <a href="#tab-wingmen" title={{t "wingmen"}} role="tab">
-          {{fa-icon "group" size="lg"}}
+          {{svg-jar "group" class="fa-svg large"}}
         </a>
       </li>
     </ul>
