--- a/ember/app/components/fullscreen-button.hbs
+++ b/ember/app/components/fullscreen-button.hbs
@@ -1,3 +1,3 @@
 <button type="button" local-class="fullscreen-button" class="ol-unselectable" ...attributes {{on "click" this.toggle}}>
-  {{fa-icon "arrows-alt"}}
+  {{svg-jar "arrows-alt" class="fa-svg"}}
 </button>
