--- a/ember/app/styles/components/layer-switcher.scss
+++ b/ember/app/styles/components/layer-switcher.scss
@@ -56,17 +56,16 @@
   background: rgba(255,255,255,0.7);
 }
 
-.GraphicLayerSwitcher a .fa {
+.GraphicLayerSwitcher a .fa-svg {
   position: absolute;
   left: 64px;
-  color: white;
+  color: black;
   font-size: 32px;
   top: 17px;
-  text-shadow: 0px 0px 10px black;
   display: none;
 }
 
-.GraphicLayerSwitcher a.active .fa {
+.GraphicLayerSwitcher a.active .fa-svg {
   display: inline;
 }
 
