--- a/ember/app/templates/clubs.hbs
+++ b/ember/app/templates/clubs.hbs
@@ -18,9 +18,9 @@
               <LinkTo @route="club" @model={{club.id}}>{{club.name}}</LinkTo>
 
               <div class="pull-right">
-                <LinkTo @route="flights.club" @model={{club.id}} class="btn btn-default btn-sm">{{fa-icon "plane"}} {{t "flights"}}</LinkTo>
-                <LinkTo @route="statistics.club" @model={{club.id}} class="btn btn-default btn-sm hidden-xs-inline">{{fa-icon "bar-chart"}} {{t "statistics"}}</LinkTo>
-                <LinkTo @route="club.pilots" @model={{club.id}} class="btn btn-default btn-sm hidden-xs-inline">{{fa-icon "group"}} {{t "members"}}</LinkTo>
+                <LinkTo @route="flights.club" @model={{club.id}} class="btn btn-default btn-sm">{{svg-jar "plane" class="fa-svg"}} {{t "flights"}}</LinkTo>
+                <LinkTo @route="statistics.club" @model={{club.id}} class="btn btn-default btn-sm hidden-xs-inline">{{svg-jar "bar-chart" class="fa-svg"}} {{t "statistics"}}</LinkTo>
+                <LinkTo @route="club.pilots" @model={{club.id}} class="btn btn-default btn-sm hidden-xs-inline">{{svg-jar "group" class="fa-svg"}} {{t "members"}}</LinkTo>
               </div>
             </td>
           </tr>
