--- a/ember/app/components/comments-list.hbs
+++ b/ember/app/components/comments-list.hbs
@@ -1,11 +1,11 @@
 <table class="table" style="table-layout:fixed; word-wrap:break-word;" ...attributes>
   <tbody>
-    {{#each @comments as |comment|}}
+    {{#each @comments as |comment index|}}
       <tr>
-        <td>
+        <td data-test-comment={{index}}>
           {{#if comment.user}}
             <span style="float:left">
-              <LinkTo @route="user" @model={{comment.user.id}}>{{comment.user.name}}</LinkTo>:&nbsp;
+              <LinkTo @route="user" @model={{comment.user.id}} data-test-user>{{comment.user.name}}</LinkTo>:&nbsp;
             </span>
           {{/if}}
 
@@ -21,9 +21,9 @@
     {{#if account.user.id}}
       <tr>
         <td>
-          <form {{action (perform this.addCommentTask) on="submit"}}>
-            <Textarea @value={{this.addCommentText}} class="form-control" @disabled={{this.addCommentTask.isRunning}} /><br>
-            <input type="submit" value={{t "add-comment"}} class="btn btn-primary" disabled={{this.addCommentTask.isRunning}}>
+          <form {{action (perform this.addCommentTask) on="submit"}} data-test-add-comment>
+            <Textarea @value={{this.addCommentText}} class="form-control" @disabled={{this.addCommentTask.isRunning}} data-test-input /><br>
+            <input type="submit" value={{t "add-comment"}} class="btn btn-primary" disabled={{this.addCommentTask.isRunning}} data-test-submit>
           </form>
         </td>
       </tr>
