--- a/ember/app/components/layer-switcher-element.hbs
+++ b/ember/app/components/layer-switcher-element.hbs
@@ -1,5 +1,5 @@
 <a
-  class={{if layer.visible "active"}}
+  local-class="layer {{if layer.visible "active"}}"
   style="cursor: pointer;"
   {{on "click" (fn @onSelect @layer)}}
   {{on "mouseenter" (action (mut this.highlighted) true)}}
