--- a/ember/app/components/layer-switcher.hbs
+++ b/ember/app/components/layer-switcher.hbs
@@ -1,12 +1,12 @@
-<div class="GraphicLayerSwitcher ol-unselectable" ...attributes>
+<div local-class="GraphicLayerSwitcher" class="ol-unselectable" ...attributes>
   {{#if open}}
     <div id="GraphicLayerSwitcher-open" {{on-click-outside (action (mut open) false) eventType="mousedown"}}>
-      <div class="base_layers">
+      <div local-class="base_layers">
         {{#each baseLayers as |layer|}}
           <LayerSwitcherElement @layer={{layer}} @onSelect={{action "select" layer}} />
         {{/each}}
       </div>
-      <div class="overlay_layers">
+      <div local-class="overlay_layers">
         {{#each overlayLayers as |layer|}}
           <LayerSwitcherElement @layer={{layer}} @onSelect={{action "select" layer}} />
         {{/each}}
@@ -17,5 +17,4 @@
       <button {{action "open"}}><img src="../../images/layers.png"></button>
     </div>
   {{/if}}
-
 </div>
