--- a/ember/app/styles/app.scss
+++ b/ember/app/styles/app.scss
@@ -5,6 +5,7 @@
 @import 'font-awesome';
 
 @import 'components/login-form';
+@import 'components/map-click-handler';
 
 @import 'tables';
 @import 'events';
