--- a/ember/app/components/map-click-handler.hbs
+++ b/ember/app/components/map-click-handler.hbs
@@ -1,11 +1,11 @@
 {{#if this.coordinate}}
   <div
-    local-class="map-click-handler"
+    class="InfoBox"
     {{did-insert this.addOverlay}}
     {{will-destroy this.removeOverlay}}
   >
     {{#if this.locationData}}
-      <div local-class="location-info">
+      <div class="location info-item">
         {{#if (or this.locationData.airspaces this.locationData.waves)}}
           {{#if this.locationData.airspaces}}
             <table>
@@ -59,24 +59,16 @@
       </div>
     {{else}}
       {{#if this.closestFlight.flight}}
-        <span local-class="registration" style="background: {{this.closestFlight.flight.color}}">
+        <span class="info-item badge" style="background: {{this.closestFlight.flight.color}}">
           {{this.closestFlight.flight.registration}}
         </span>
-        <button
-          type="button"
-          local-class="nearby-flights-button"
-          {{on "click" this.loadNearbyFlights}}
-        >
-          Load nearby flights
-        </button>
+        <div class="info-item">
+          <a class="near" href="#NearFlights" {{on "click" this.loadNearbyFlights}}>Load nearby flights</a>
+        </div>
       {{/if}}
-      <button
-        type="button"
-        local-class="location-info-button"
-        {{on "click" this.getLocationInfo}}
-      >
-        Get location info
-      </button>
+      <div class="info-item">
+        <a class="near" href="#LocationInfo" {{on "click" this.getLocationInfo}}>Get location info</a>
+      </div>
     {{/if}}
   </div>
 {{/if}}
