--- a/ember/app/components/layer-switcher-element.hbs
+++ b/ember/app/components/layer-switcher-element.hbs
@@ -1,5 +1,5 @@
 <a
-  local-class="layer {{if layer.visible "active"}}"
+  local-class="layer {{if @visible "active"}}"
   style="cursor: pointer;"
   {{on "click" (fn @onSelect @layer)}}
   {{on "mouseenter" (action (mut this.highlighted) true)}}
@@ -7,6 +7,6 @@
   {{on "touchstart" (action (mut this.highlighted) true)}}
   {{on "touchend" (action (mut this.highlighted) false)}}
 >
-  <img src={{imagePath}} local-class="image {{if this.dimmed "dimmed"}}">
-  {{svg-jar "check" class="fa-svg"}} {{layer.name}}
+  <img src={{this.imagePath}} local-class="image {{if this.dimmed "dimmed"}}">
+  {{svg-jar "check" class="fa-svg"}} {{@name}}
 </a>
