--- a/ember/app/components/layer-switcher.hbs
+++ b/ember/app/components/layer-switcher.hbs
@@ -3,12 +3,20 @@
     <div id="GraphicLayerSwitcher-open" {{on-click-outside (action (mut open) false) eventType="mousedown"}}>
       <div local-class="base_layers">
         {{#each baseLayers as |layer|}}
-          <LayerSwitcherElement @name={{layer.name}} @visible={{eq this.mapSettings.baseLayer layer.name}} @onSelect={{action "select" layer}} />
+          <LayerSwitcherElement
+            @name={{layer}}
+            @visible={{eq this.mapSettings.baseLayer layer}}
+            @onSelect={{fn this.mapSettings.setBaseLayer layer}}
+          />
         {{/each}}
       </div>
       <div local-class="overlay_layers">
         {{#each overlayLayers as |layer|}}
-          <LayerSwitcherElement @name={{layer.name}} @visible={{includes this.mapSettings.overlayLayers layer.name}} @onSelect={{action "select" layer}} />
+          <LayerSwitcherElement
+            @name={{layer}}
+            @visible={{includes this.mapSettings.overlayLayers layer}}
+            @onSelect={{fn this.mapSettings.toggleOverlayLayer layer}}
+          />
         {{/each}}
       </div>
     </div>
