--- a/ember/app/components/plane-label-overlay.hbs
+++ b/ember/app/components/plane-label-overlay.hbs
@@ -1,5 +1,5 @@
 <span
-  class="badge plane_marker"
+  local-class="label"
   style={{this.style}}
   {{did-insert this.addToMap}}
   {{did-update this.updatePosition @position}}
